# TSNN-Drug

./: .gitignore  INNOVATIONS.md  NEURIPS_PLAN.md  README.md  RUN_GUIDE.md  neurips2026_paper.tex  paper.tex  program.md  pyproject.toml  results.tsv
configs/: default.yaml
scripts/: autoresearch.sh  download_data.py  evaluate.py  preprocess_data.py  queue_v2.sh  run_full_pipeline.sh  run_v2_improved.sh  train.py
tests/: test_end_to_end.py  test_equivariance.py  test_equivariant_encoder.py  test_graph_builder.py  test_householder.py  test_innovations.py  test_losses.py  test_sheaf_transport.py  test_splits.py  test_survival_head.py
tsnn/: __init__.py
tsnn/evaluation/: __init__.py  ablation_runner.py  benchmark.py  mechanistic.py  metrics.py  uncertainty.py
tsnn/losses/: __init__.py  combined.py  pretraining_losses.py  ranking.py  regression.py  sheaf_smoothness.py  survival_nll.py
tsnn/model/: __init__.py  contact_hazard_head.py  equivariant_encoder.py  householder.py  sheaf_ode.py  sheaf_transport.py  spectral_sheaf.py  survival_head.py  tsnn.py
tsnn/model/layers/: __init__.py  egnn_layer.py  mlp.py  sheaf_gru.py
tsnn/training/: __init__.py  trainer.py
tsnn/utils/: __init__.py  chemistry.py  geometry.py  io.py  scatter.py  visualization.py
