[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tsnn-drug"
version = "0.1.0"
description = "Equivariant Temporal Sheaf Networks for Protein-Ligand Dissociation Kinetics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "torch-geometric>=2.5",
    "torch-scatter",
    "torch-sparse",
    "numpy>=1.24",
    "scipy>=1.11",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "h5py>=3.9",
    "MDAnalysis>=2.6",
    "rdkit>=2023.9",
    "biopython>=1.81",
    "lifelines>=0.27",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "wandb>=0.15",
    "tqdm>=4.65",
    "einops>=0.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov", "black", "ruff"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tsnn*"]
